[package]
name = "git_ext"
version = "0.1.0"
authors = ["Colin Fuller <cjfuller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.18"
colored = "2"
anyhow = "1.0.32"
regex = "1.3.9"
tabular = "0.1.4"