[package]
name = "git_ext"
version = "0.1.0"
authors = ["Colin Fuller <cjfuller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
colored = "2"
anyhow = "1.0.32"
regex = "1.3.9"
comfy-table = "5.0.1"
dialoguer = "0.8.0"
